pd3/python_pd3Parser.py
# Generated from python_pd3.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class python_pd3Parser ( Parser ):

    grammarFileName = "python_pd3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'('", "')'", "'['", "']'", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "','", "'if'", "'elif'", "'else'", "'while'", 
                     "'for'", "'in'", "'range'", "'and'", "'or'", "'not'", 
                     "'True'", "'False'", "'<='", "'>='", "'=='", "'!='", 
                     "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ASSIGN", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "COMMA", "IF", "ELIF", "ELSE", 
                      "WHILE", "FOR", "IN", "RANGE", "AND", "OR", "NOT", 
                      "TRUE", "FALSE", "LTE", "GTE", "EQ", "NEQ", "LT", 
                      "GT", "VARIABLE", "NUMBER", "STRING", "LINE_COMMENT", 
                      "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_ifStatement = 3
    RULE_whileStatement = 4
    RULE_forStatement = 5
    RULE_block = 6
    RULE_expression = 7
    RULE_orExpr = 8
    RULE_andExpr = 9
    RULE_notExpr = 10
    RULE_comparison = 11
    RULE_arithExpr = 12
    RULE_term = 13
    RULE_factor = 14
    RULE_list = 15

    ruleNames =  [ "program", "statement", "assignment", "ifStatement", 
                   "whileStatement", "forStatement", "block", "expression", 
                   "orExpr", "andExpr", "notExpr", "comparison", "arithExpr", 
                   "term", "factor", "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    ASSIGN=6
    ADD_ASSIGN=7
    SUB_ASSIGN=8
    MUL_ASSIGN=9
    DIV_ASSIGN=10
    ADD=11
    SUB=12
    MUL=13
    DIV=14
    MOD=15
    COMMA=16
    IF=17
    ELIF=18
    ELSE=19
    WHILE=20
    FOR=21
    IN=22
    RANGE=23
    AND=24
    OR=25
    NOT=26
    TRUE=27
    FALSE=28
    LTE=29
    GTE=30
    EQ=31
    NEQ=32
    LT=33
    GT=34
    VARIABLE=35
    NUMBER=36
    STRING=37
    LINE_COMMENT=38
    NEWLINE=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(python_pd3Parser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd3Parser.NEWLINE)
            else:
                return self.getToken(python_pd3Parser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.StatementContext,i)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = python_pd3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 32
                self.match(python_pd3Parser.NEWLINE)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34363015168) != 0):
                self.state = 38
                self.statement()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 39
                    self.match(python_pd3Parser.NEWLINE)
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(python_pd3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(python_pd3Parser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(python_pd3Parser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(python_pd3Parser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(python_pd3Parser.ForStatementContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = python_pd3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.assignment()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.ifStatement()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.whileStatement()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.forStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(python_pd3Parser.VARIABLE, 0)

        def ASSIGN(self):
            return self.getToken(python_pd3Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(python_pd3Parser.ExpressionContext,0)


        def ADD_ASSIGN(self):
            return self.getToken(python_pd3Parser.ADD_ASSIGN, 0)

        def SUB_ASSIGN(self):
            return self.getToken(python_pd3Parser.SUB_ASSIGN, 0)

        def MUL_ASSIGN(self):
            return self.getToken(python_pd3Parser.MUL_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(python_pd3Parser.DIV_ASSIGN, 0)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = python_pd3Parser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(python_pd3Parser.VARIABLE)
                self.state = 59
                self.match(python_pd3Parser.ASSIGN)
                self.state = 60
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(python_pd3Parser.VARIABLE)
                self.state = 62
                self.match(python_pd3Parser.ADD_ASSIGN)
                self.state = 63
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(python_pd3Parser.VARIABLE)
                self.state = 65
                self.match(python_pd3Parser.SUB_ASSIGN)
                self.state = 66
                self.expression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.match(python_pd3Parser.VARIABLE)
                self.state = 68
                self.match(python_pd3Parser.MUL_ASSIGN)
                self.state = 69
                self.expression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.match(python_pd3Parser.VARIABLE)
                self.state = 71
                self.match(python_pd3Parser.DIV_ASSIGN)
                self.state = 72
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(python_pd3Parser.IF, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.ExpressionContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.BlockContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.BlockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd3Parser.ELIF)
            else:
                return self.getToken(python_pd3Parser.ELIF, i)

        def ELSE(self):
            return self.getToken(python_pd3Parser.ELSE, 0)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = python_pd3Parser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(python_pd3Parser.IF)
            self.state = 76
            self.expression()
            self.state = 77
            self.match(python_pd3Parser.T__0)
            self.state = 78
            self.block()
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.match(python_pd3Parser.ELIF)
                    self.state = 80
                    self.expression()
                    self.state = 81
                    self.match(python_pd3Parser.T__0)
                    self.state = 82
                    self.block() 
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 89
                self.match(python_pd3Parser.ELSE)
                self.state = 90
                self.match(python_pd3Parser.T__0)
                self.state = 91
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(python_pd3Parser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(python_pd3Parser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(python_pd3Parser.BlockContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = python_pd3Parser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(python_pd3Parser.WHILE)
            self.state = 95
            self.expression()
            self.state = 96
            self.match(python_pd3Parser.T__0)
            self.state = 97
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(python_pd3Parser.FOR, 0)

        def VARIABLE(self):
            return self.getToken(python_pd3Parser.VARIABLE, 0)

        def IN(self):
            return self.getToken(python_pd3Parser.IN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.ExpressionContext,i)


        def block(self):
            return self.getTypedRuleContext(python_pd3Parser.BlockContext,0)


        def RANGE(self):
            return self.getToken(python_pd3Parser.RANGE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd3Parser.COMMA)
            else:
                return self.getToken(python_pd3Parser.COMMA, i)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)




    def forStatement(self):

        localctx = python_pd3Parser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forStatement)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(python_pd3Parser.FOR)
                self.state = 100
                self.match(python_pd3Parser.VARIABLE)
                self.state = 101
                self.match(python_pd3Parser.IN)
                self.state = 102
                self.expression()
                self.state = 103
                self.match(python_pd3Parser.T__0)
                self.state = 104
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(python_pd3Parser.FOR)
                self.state = 107
                self.match(python_pd3Parser.VARIABLE)
                self.state = 108
                self.match(python_pd3Parser.IN)
                self.state = 109
                self.match(python_pd3Parser.RANGE)
                self.state = 110
                self.match(python_pd3Parser.T__1)
                self.state = 111
                self.expression()
                self.state = 112
                self.match(python_pd3Parser.T__2)
                self.state = 113
                self.match(python_pd3Parser.T__0)
                self.state = 114
                self.block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(python_pd3Parser.FOR)
                self.state = 117
                self.match(python_pd3Parser.VARIABLE)
                self.state = 118
                self.match(python_pd3Parser.IN)
                self.state = 119
                self.match(python_pd3Parser.RANGE)
                self.state = 120
                self.match(python_pd3Parser.T__1)
                self.state = 121
                self.expression()
                self.state = 122
                self.match(python_pd3Parser.COMMA)
                self.state = 123
                self.expression()
                self.state = 124
                self.match(python_pd3Parser.T__2)
                self.state = 125
                self.match(python_pd3Parser.T__0)
                self.state = 126
                self.block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.match(python_pd3Parser.FOR)
                self.state = 129
                self.match(python_pd3Parser.VARIABLE)
                self.state = 130
                self.match(python_pd3Parser.IN)
                self.state = 131
                self.match(python_pd3Parser.RANGE)
                self.state = 132
                self.match(python_pd3Parser.T__1)
                self.state = 133
                self.expression()
                self.state = 134
                self.match(python_pd3Parser.COMMA)
                self.state = 135
                self.expression()
                self.state = 136
                self.match(python_pd3Parser.COMMA)
                self.state = 137
                self.expression()
                self.state = 138
                self.match(python_pd3Parser.T__2)
                self.state = 139
                self.match(python_pd3Parser.T__0)
                self.state = 140
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return python_pd3Parser.RULE_block

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SingleLineBlockContext(BlockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd3Parser.BlockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(python_pd3Parser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleLineBlock" ):
                listener.enterSingleLineBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleLineBlock" ):
                listener.exitSingleLineBlock(self)


    class MultiLineBlockContext(BlockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a python_pd3Parser.BlockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd3Parser.NEWLINE)
            else:
                return self.getToken(python_pd3Parser.NEWLINE, i)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiLineBlock" ):
                listener.enterMultiLineBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiLineBlock" ):
                listener.exitMultiLineBlock(self)



    def block(self):

        localctx = python_pd3Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17, 20, 21, 35]:
                localctx = python_pd3Parser.SingleLineBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.statement()
                pass
            elif token in [39]:
                localctx = python_pd3Parser.MultiLineBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 146 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 145
                    self.match(python_pd3Parser.NEWLINE)
                    self.state = 148 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==39):
                        break

                self.state = 151 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 150
                        self.statement()

                    else:
                        raise NoViableAltException(self)
                    self.state = 153 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(python_pd3Parser.OrExprContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = python_pd3Parser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.AndExprContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd3Parser.OR)
            else:
                return self.getToken(python_pd3Parser.OR, i)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)




    def orExpr(self):

        localctx = python_pd3Parser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.andExpr()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 160
                self.match(python_pd3Parser.OR)
                self.state = 161
                self.andExpr()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.NotExprContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.NotExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(python_pd3Parser.AND)
            else:
                return self.getToken(python_pd3Parser.AND, i)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)




    def andExpr(self):

        localctx = python_pd3Parser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.notExpr()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 168
                self.match(python_pd3Parser.AND)
                self.state = 169
                self.notExpr()
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(python_pd3Parser.NOT, 0)

        def notExpr(self):
            return self.getTypedRuleContext(python_pd3Parser.NotExprContext,0)


        def comparison(self):
            return self.getTypedRuleContext(python_pd3Parser.ComparisonContext,0)


        def getRuleIndex(self):
            return python_pd3Parser.RULE_notExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)




    def notExpr(self):

        localctx = python_pd3Parser.NotExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_notExpr)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.match(python_pd3Parser.NOT)
                self.state = 176
                self.notExpr()
                pass
            elif token in [2, 4, 27, 28, 35, 36, 37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.comparison()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(python_pd3Parser.ArithExprContext)
            else:
                return self.getTypedRuleContext(python_pd3Parser.ArithExprContext,i)


        def LT(self):
            return self.getToken(python_pd3Parser.LT, 0)

        def LTE(self):
            return self.getToken(python_pd3Parser.LTE, 0)

        def GT(self):
            return self.getToken(python_pd3Parser.GT, 0)

        def GTE(self):
            return self.getToken(python_pd3Parser.GTE, 0)

        def EQ(self):
            return self.getToken(python_pd3Parser.EQ, 0)

        def NEQ(self):
            return self.getToken(python_pd3Parser.NEQ, 0)

        def getRuleIndex(self):
            return python_pd3Parser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)




    def comparison(self):
